--- a/WinUI_V3.csproj
+++ b/WinUI_V3.csproj
@@ -19,7 +19,6 @@
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
 
@@ -94,5 +93,9 @@
     <Page Update="Pages\TargetsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+	  <None Include="tools\**" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 </Project>
