Install potential fix

--- a/WinUI_V3.csproj
+++ b/WinUI_V3.csproj
@@ -56,6 +56,7 @@
     <PublishTrimmed Condition="'$(Configuration)' == 'Debug'">False</PublishTrimmed>
     <PublishTrimmed Condition="'$(Configuration)' != 'Debug'">True</PublishTrimmed>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <SelfContained>true</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
